[package]
name = "sqr_lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
# clap = { version = "4.3.21", features = ["derive"] }
dlopen_derive = "0.1.4"
#libc = { version = "0.2.147" }
libc = { path = "../libc/" }
libloading = "0.8.0"
retour = { version = "0.3.1", features = ["static-detour"] }

# tier0.dll stub to handle memory allocations
[lib]
name = "tier0"
path = "src/tier0/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "sqr_compiler"
path = "src/sqr_compiler/main.rs"

# [build]
# rustflags = ["-C", "link-args=-rdynamic"]
